--- a/packages/react-frontend/src/styles/styles.css
+++ b/packages/react-frontend/src/styles/styles.css
@@ -36,3 +36,21 @@ body {
   font-weight: bold;
   font-style: normal;
 }
+
+.centered-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%; /* Optional, adjust as needed */
+  padding: 20px; /* Adjust as needed for spacing */
+  text-align: center;
+}
+
+.centered-wrapper p {
+  margin: 0;
+}
+
+.centered-wrapper h1 {
+  margin: 0;
+}
