--- a/packages/react-frontend/src/styles/styles.css
+++ b/packages/react-frontend/src/styles/styles.css
@@ -54,3 +54,10 @@ body {
 .centered-wrapper h1 {
   margin: 0;
 }
+
+.center-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
